# Zhao-FMSAE-2026

./: .gitignore  LICENSE  README.md  SAE.py  demo.ipynb  pyproject.toml  utils.py
data/: SAE_feature_groups.csv  SAE_group_names.csv  ref_SAE_compressed.joblib
data/demo_dataset.zarr/: zmetadata
data/demo_dataset.zarr/images/P132666-HE-0/: .zattrs
data/demo_dataset.zarr/images/P132666-HE-0/0/: .zarray
data/demo_dataset.zarr/images/P132666-HE-0/0/0/0/: 0  1  2  3
data/demo_dataset.zarr/images/P132666-HE-0/0/0/1/: 0  1  2  3
data/demo_dataset.zarr/images/P132666-HE-0/1/: .zarray
data/demo_dataset.zarr/images/P132666-HE-0/2/: .zarray
data/demo_dataset.zarr/images/P132666-HE-0/3/: .zarray
data/demo_dataset.zarr/images/P132666-HE-0/4/: .zarray
data/demo_dataset.zarr/points/P132666-HE-0_grid_point/: .zattrs
data/demo_dataset.zarr/points/P132666-HE-0_grid_point/points.parquet/: part.0.parquet
data/demo_dataset.zarr/shapes/P132666-HE-0_grid_point_bbox/: .zattrs  shapes.parquet
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/: .zattrs
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/X/: .zarray
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/X/0/: 0
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/: .zattrs
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/_index/: .zarray  0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/image/: 0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/instance_id/: 0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/is_tissue/: .zarray  0
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/xmax/: 0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/xmin/: 0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/ymax/: .zarray  0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obs/ymin/: 0  1
data/demo_dataset.zarr/tables/P132666-HE-0_grid_point_patch/obsm/UNI_embedding/: .zarray
(+287 files in other folders)
