[project]
name = "Zhao-FMSAE-2026"
version = "1.0.0"
description = "TODO"
authors = [{ name = "Ziyuan Zhao", email = "ziyuanzhao@fas.harvard.edu" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "matplotlib",
    "zarr",
    "spatialdata[extra]",
    "numpy",
    "tqdm",
    "joblib",
    "pandas",
    "torch",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
