[project]
name = "Zhao-FMSAE-2026"
version = "1.0.0"
description = "TODO"
authors = [{ name = "Ziyuan Zhao", email = "ziyuanzhao@fas.harvard.edu" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "matplotlib",
    "zarr",
    "numpy",
    "tqdm",
    "pandas",
    "torch",
    "spatialdata[extra]==0.4.0",
    "notebook>=7.5.6",
]

[tool.setuptools.packages.find]
namespaces = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"
