[project]
name = "Zhao-FMSAE-2026"
version = "1.0.0"
description = "TODO"
authors = [{ name = "Ziyuan Zhao", email = "ziyuanzhao@fas.harvard.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = '>=3.14'
dependencies = [
    "anndata",
    "ipywidgets>=8.1.8",
    "joblib",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "scikit-learn>=1.6",
    "scipy",
    "spatialdata",
    "spatialdata-plot",
    "torch",
    "tqdm",
]

[tool.setuptools.packages.find]
namespaces = false

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
